--- a/SitoWeb/Sources/Styles/summary.css
+++ b/SitoWeb/Sources/Styles/summary.css
@@ -1,5 +1,6 @@
 .summary{
-        
+    font-size: 20px;
+    text-shadow: 1px 1px  black; 
     background-color:white;
     margin: 100px  150px;
     flex: 1;
@@ -14,11 +15,26 @@
     padding: 20px;
 }
 .summary-section h1{
-    color: yellow;
+    background-color: rgba(173, 173, 173, 0.518);
+    border-bottom: 2px solid grey;
+    border-right: 2px solid grey;
     text-shadow: 2px 2px black; 
+    color: yellow;
     padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    box-shadow:4px 2px 2px 0px rgb(0 0 0 / 40%); 
 }
 
 .summary-section img{
+    width: 500px;
     box-shadow:6px 11px 8px 0px rgb(0 0 0 / 47%);
+}
+.summary-section p{
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow:2px 7px 4px 3px rgb(0 0 0 / 56%)
+}
+.summary-section:last-child h1{
+    text-align: right;
 }
